[tool.poetry]
name = "contextvars_experiments"
version = "0.1.0"
description = ""
authors = ["Jamie Richmond <jamesrichmond@bulb.co.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
trio = "^0.20.0"

[tool.poetry.dev-dependencies]
ipython = "^8.3.0"
mypy = "^0.950"
pdbpp = "^0.10.3"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
